--- a/style.css
+++ b/style.css
@@ -20,6 +20,19 @@ body {
   text-align: center;
 }
 
+a {
+  text-decoration: none;
+  color: #3498db;
+  font-size: 18px;
+  transition: color 0.3s;
+  padding: 5px 10px;
+  border-radius: 10px;
+}
+a:hover {
+  color: #2980b9;
+  cursor: pointer;
+  box-shadow: 0 0 5px rgba(41, 128, 185, 0.5);
+}
 .list {
   list-style-type: none;
   margin-top: 20px;
